--- a/capstone.css
+++ b/capstone.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+
 /* ------------ ONSIES CSS ----------------------- */
 .w25{width: 25% !important;}
 .w55{width: 55% !important;}
@@ -19,8 +22,8 @@
 .centrize {text-align: center !important;}
 .optional{border: 1.5px solid black !important;}
 .mandatory{border: 1.5px solid red !important;}
-input:not(:placeholder-shown) {border-color: hsl(0, 76%, 50%) !important;}
-input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;}
+/* input:not(:placeholder-shown) {border-color: hsl(0, 76%, 50%) !important;}
+input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
 .inline{display: inline-block !important; display:flex; flex-direction: row;}
 .invi{display: none !important}
 /* ------------ General Application -------------- */
@@ -55,7 +58,7 @@ hr
     background-image: linear-gradient(rgb(235, 154, 154), rgb(207, 73, 73));
     background-attachment: fixed;
 }
-.volunteer-page-body, .report-page-body, .inventory-page-body {
+.volunteer-page-body, .report-page-body, .inventory-page-body, .admin-page-body {
     text-align: center;
     background-image: white;
     background-attachment: fixed;
@@ -184,49 +187,184 @@ hr
 }
 #myList li:nth-of-type(1n+7){display: none;}
 /* ------------ Admin Page ----------------------- */
-.instructions
-{
-    margin-right:20% !important;
-    margin-left: 25% !important;
-} 
-.midbigger
-{
-    width: 110% !important;
-    padding: 5% !important;
-    height: 5% !important;
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
 }
-.radioBtn
-{
-    margin-left: 35% !important;
-    padding: 1% !important;
-    font-size: 1.2vw !important;
+
+.sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
 }
-.upper_portion_admin
-{
-    text-align: center;
-    width: 80% !important;
-    margin-right: 5% !important;
+
+.sidebar a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
+}
+
+.change-pw-input {
+    border: 0px solid black !important;
+    background-color: transparent !important;
+    background: transparent !important;
+    border-bottom: 3px solid rgb(102, 124, 246) !important;
+    width: 28% !important;
+    margin-right: 2% !important;
+    padding: 0.5% 1% 0.75% 0.5%;
+    transition: 0.3s !important;
+}   
+
+.change-pw-input:focus{
+    outline: none !important;
+    width: 32% !important;
+    font-weight: bolder !important;
+    font-size: 110% !important;
+    transition: all 0.35s ease-in-out !important;
+}
+
+.submit-pw-change-btn, .submit-admin-market-option {
+    background-color: #28a745 !important;
+    width: 90% !important;
+    padding: 0.9% 0% 0.9% 0% !important;
+    text-transform: uppercase;
+    transition: 0.3s !important;
+    color: white !important;
+    border: 0.5px solid white !important;
+    margin-bottom: 0.45% !important;
+}
+.submit-pw-change-btn:hover, .submit-admin-market-option:hover {
+    padding: 1.25% 0% 1.25% 0% !important;
+    width: 95% !important;
+    margin-bottom: 0% !important;
+}
+
+.sub-admin-page-container {
+    /* background-color: rgba(255, 255, 255, 0.801) !important; */
+    border-radius: 1.5px !important;
+    border: 0.5px solid black !important;
+    width: 90% !important;
+    padding-top: 2% !important;
     margin-left: 5% !important;
-    padding-right: 3% !important;
-    padding-left: 3% !important;
+    padding: 2.5% 0.5% 0.5% 0.5% !important;
+    text-align: center;
 }
-.whiteOut /* adminFuncs */
-{
-    background-color: white !important ;
-    border-radius: 25px !important ;
-    border-right: 2px solid black !important ;
-    border-left: 2px solid black !important ;
-}
-.ddOption /* adminFuncs */
-{
-    margin-left: 20% !important;
-    padding: 1.5% !important;
-}
-.lower_portion
-{
-    margin-top: 10% !important;
-    margin-bottom: 7% !important;
-}
+
+#market-actions .admin-options-list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+      overflow: auto;
+  }
+  
+  .admin-options-list li{
+    color: #AAAAAA;
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100px;
+      border-bottom: 1px solid #333;
+  }
+  
+  .admin-options-list li input[type=radio]{
+    position: absolute;
+    visibility: hidden;
+  }
+  
+  .admin-options-list li label{
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: pointer;
+    -webkit-transition: all 0.25s linear;
+  }
+  
+  .admin-options-list li:hover label{
+      color: #FFFFFF;
+  }
+  
+  .admin-options-list li .check{
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 30px;
+    left: 20px;
+      z-index: 5;
+      transition: border .25s linear;
+      -webkit-transition: border .25s linear;
+  }
+  
+  .admin-options-list li:hover .check {
+    border: 5px solid #FFFFFF;
+  }
+  
+  .admin-options-list li .check::before {
+    display: block;
+    position: absolute;
+      content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 5px;
+      left: 5px;
+    margin: auto;
+      transition: background 0.25s linear;
+      -webkit-transition: background 0.25s linear;
+  }
+  
+  input[type=radio]:checked ~ .check {
+    border: 5px solid #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ .check::before{
+    background: #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ label{
+    color: #0DFF92;
+  }
 /* ------------ Report Page ---------------------- */
 .report_box_class
 {
@@ -427,7 +565,7 @@ hr
     padding-right: 5% !important;
     padding-left: 5% !important;
 }
-.add-volunteer-btn:hover, .volunteer-email-list:hover, .show-deactivated-volunteers:hover, .email-volunteer-list-btn:hover, ., .add-inventory-btn:hover {
+.add-volunteer-btn:hover, .volunteer-email-list:hover, .show-deactivated-volunteers:hover, .email-volunteer-list-btn:hover, .add-inventory-btn:hover {
     background-position: right center !important;
     text-shadow: 0px 0px 10px rgba(255,255,255,3.5);
     transition: all 0.5s ease-in-out !important;
