--- a/capstone.css
+++ b/capstone.css
@@ -286,26 +286,25 @@ div.content {
 #market-actions .admin-options-list{
     list-style: none;
     margin: 0;
-    padding: 0;
-      overflow: auto;
-  }
-  
-  .admin-options-list li{
+    padding: 0 20% 0 20% !important;
+    overflow: auto;
+}
+
+.admin-options-list .admin-options-list-item{
     color: #AAAAAA;
     display: block;
     position: relative;
     float: left;
     width: 100%;
-    height: 100px;
-      border-bottom: 1px solid #333;
-  }
-  
-  .admin-options-list li input[type=radio]{
+    height: 20% !important;
+}
+
+.admin-options-list .admin-options-list-item .admin-option{
     position: absolute;
     visibility: hidden;
-  }
-  
-  .admin-options-list li label{
+}
+
+.admin-options-list .admin-options-list-item .admin-option-label{
     display: block;
     position: relative;
     font-weight: 300;
@@ -313,16 +312,17 @@ div.content {
     padding: 25px 25px 25px 80px;
     margin: 10px auto;
     height: 30px;
-    z-index: 9;
+    z-index: 3;
     cursor: pointer;
     -webkit-transition: all 0.25s linear;
-  }
-  
-  .admin-options-list li:hover label{
-      color: #FFFFFF;
-  }
-  
-  .admin-options-list li .check{
+}
+
+.admin-options-list .admin-options-list-item:hover .admin-option-label{
+    color: #303030 !important;
+    font-weight: bolder !important;
+}
+
+.admin-options-list .admin-options-list-item .check{
     display: block;
     position: absolute;
     border: 5px solid #AAAAAA;
@@ -331,40 +331,42 @@ div.content {
     width: 25px;
     top: 30px;
     left: 20px;
-      z-index: 5;
-      transition: border .25s linear;
-      -webkit-transition: border .25s linear;
-  }
-  
-  .admin-options-list li:hover .check {
-    border: 5px solid #FFFFFF;
-  }
-  
-  .admin-options-list li .check::before {
+    z-index: 5;
+    transition: border 0.25s linear;
+    -webkit-transition: border 0.25s linear;
+}
+
+.admin-options-list .admin-options-list-item:hover .check {
+    border: 5px solid #303030 !important;
+}
+
+.admin-options-list .admin-options-list-item .check::before {
     display: block;
     position: absolute;
-      content: '';
+    content: '';
     border-radius: 100%;
     height: 15px;
     width: 15px;
-    top: 5px;
-      left: 5px;
+    top: 0px;
+    left: 0px;
     margin: auto;
-      transition: background 0.25s linear;
-      -webkit-transition: background 0.25s linear;
-  }
-  
-  input[type=radio]:checked ~ .check {
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear;
+}
+
+.admin-option:checked ~ .check {
     border: 5px solid #0DFF92;
-  }
-  
-  input[type=radio]:checked ~ .check::before{
+}
+
+.admin-option:checked ~ .check::before{
     background: #0DFF92;
-  }
-  
-  input[type=radio]:checked ~ label{
+}
+
+.admin-option:checked ~ .admin-option-label{
     color: #0DFF92;
-  }
+    font-size: 165% !important;
+    font-weight: bolder !important;
+}
 /* ------------ Report Page ---------------------- */
 .report_box_class
 {
