--- a/capstone.css
+++ b/capstone.css
@@ -191,8 +191,9 @@ hr
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #f1f1f1;
+    background-color: #f1f1f1e3;
     position: fixed;
+    padding-top: 8% !important;
     height: 100%;
     overflow: auto;
 }
@@ -202,16 +203,25 @@ hr
     color: black;
     padding: 16px;
     text-decoration: none;
+    border-bottom: 0.3px solid rgb(102, 124, 246) !important;
+    border-top: 0.3px solid rgb(102, 124, 246) !important;
+    transition: all 0.25s linear !important;
+    outline: none;
 }
 
 .sidebar a.active {
-    background-color: #4CAF50;
+    background-color: rgb(102, 124, 246) !important;
     color: white;
+    outline: none;
+    padding-top: 10% !important;
 }
 
 .sidebar a:hover:not(.active) {
-    background-color: #555;
+    background-color: #444;
     color: white;
+    outline: none;
+    font-weight: bolder !important;
+    font-size: 110% !important;
 }
 
 div.content {
@@ -266,6 +276,7 @@ div.content {
     border: 0.5px solid white !important;
     margin-bottom: 0.45% !important;
 }
+
 .submit-pw-change-btn:hover, .submit-admin-market-option:hover, .submit-new-market-date:hover {
     padding: 1.25% 0% 1.25% 0% !important;
     width: 95% !important;
@@ -382,14 +393,14 @@ div.content {
     color: rgb(34, 226, 0) !important;
     background-color: rgb(186, 212, 192) !important;
     width: auto !important;
-    border-radius: 4px;
+    border-radius: 150px;
     text-shadow: 0.3px 0.3px black;
 }
 .student-status-uncheck{
     color: rgb(219, 0, 0) !important;
     background-color: rgb(223, 161, 161) !important;
     width: auto !important;
-    border-radius: 4px;
+    border-radius: 150px;
     text-shadow: 0.3px 0.3px black;
 }
 .request-pdf-report-form {
@@ -414,7 +425,7 @@ div.content {
 .select-markets {
     padding: 0.75% 2.5% 0.75% 2.5% !important;
     border: 0px solid black !important;
-    border-bottom: 2px solid black !important;
+    border-bottom: 3px solid rgb(102, 124, 246) !important;
     width: 30% !important;
     text-align: center;
     transition: 0.5s !important;
@@ -534,7 +545,6 @@ div.content {
     background-color: black;
     padding-bottom: 10% !important;}
 /* ---------- VOLUNTEERS PAGE ---------------- */
-
 .add-volunteer-input {
     border: 0px !important;
     border-bottom: 3px solid black !important;
