finished admin page completely! looks good

--- a/capstone.css
+++ b/capstone.css
@@ -75,14 +75,19 @@ hr
 }
 .footer
 {
-    background-color: white;
+    position: absolute;
+    bottom: 2.5% !important;
+    width: 100%;
+    height: auto; 
+    background-color: rgb(251, 223, 223);
     padding-top: 1% !important;
-    padding-bottom: 1% !important;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    margin-bottom: 1% !important;
     text-align: center;
-    margin-top: 2% !important;
+    border-top: 2px solid black !important;
+    border-bottom: 2px solid black !important;
+}
+.shahaf-signature {
+    font-size: 70% !important;
+    font-weight: bolder !important;
 }
 .w20
 {
@@ -226,7 +231,7 @@ hr
 div.content {
     margin-left: 200px;
     padding: 1px 16px;
-    height: 1000px;
+    height: 100%;
 }
 
 @media screen and (max-width: 700px) {
