--- a/capstone.css
+++ b/capstone.css
@@ -141,8 +141,65 @@ hr
     margin-bottom: 0% !important;
 }
 
-
-
+.index-registration-input{
+    border: none !important;
+    border-bottom: 2px solid black !important;
+    width: 80% !important;
+    margin-bottom: 2% !important;
+    padding: 0.5% 0  0.5% 0 !important;
+    transition: 0.3s !important;
+}
+.index-registration-input:focus {
+    outline: none !important;
+    border-bottom: 3px solid rgb(102, 124, 246) !important;
+    transition: all 0.3s ease-in-out !important;
+    font-size: 105% !important;
+    font-weight: bold !important;
+}
+.third {
+    width: 25% !important;
+    margin-right: 2.5% !important;
+}
+.third:focus {
+    width: 30% !important;
+}
+.half {
+    width: 37% !important;
+    margin-right: 2.5% !important;
+}
+.half:focus {
+    width: 42% !important;
+}
+.full {
+    width: 80% !important;
+    margin-right: 10% !important;
+    margin-left: 10% !important;
+}
+.full:focus {
+    width: 85% !important;
+    margin-right: 7.5% !important;
+    margin-left: 7.5% !important;
+}
+.btn-submit-new-patron {
+    background-color: #28a745 !important;
+    width: 80% !important;
+    padding: 0.9% 0% 0.9% 0% !important;
+    text-transform: uppercase;
+    transition: 0.3s !important;
+    color: white !important;
+    border: 0.5px solid white !important;
+    margin-bottom: 0.45% !important;
+}
+.btn-submit-new-patron:hover {
+    padding: 1.25% 0% 1.25% 0% !important;
+    width: 85% !important;
+    margin-bottom: 0% !important;
+}
+.registration-instructions-text {
+    /* float: left !important; */
+    /* margin-left: 15% !important; */
+    /* text-align: left !important; */
+}
 
 
 
@@ -235,7 +292,7 @@ hr
 
 .sidebar a {
     display: block;
-    color: black;
+    color: white !important;
     padding: 16px;
     text-decoration: none;
     border-bottom: 0.3px solid rgb(102, 124, 246) !important;
