--- a/capstone.css
+++ b/capstone.css
@@ -18,7 +18,7 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
 .inline{display: inline-block !important; display:flex; flex-direction: row;}
 .invi{display: none !important}
 /* ------- BODIES AND CONTAINERS ---- */
-.volunteer-page-body, .report-page-body, .inventory-page-body, .admin-page-body, .index-page-body, .signups-page-body {
+.volunteer-page-body, .report-page-body, .inventory-page-body, .admin-page-body, .index-page-body, .signups-page-body, .profile-page-body {
     text-align: center;
     background-image: white;
     background-attachment: fixed;
@@ -65,6 +65,39 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     background-attachment: fixed !important;
 }
 
+
+/* ------------ Signups Page ---------------- */
+.index-signups-page-header-title {
+    background-image: linear-gradient(to right,rgb(134, 151, 246),rgb(102, 124, 246)) !important; /* rgb(79, 249, 255)*/
+    -webkit-background-clip: text;
+    color: transparent;
+    float: left !important;
+    margin-left: 4% !important;
+    width: auto !important;
+    border:0px !important;
+    padding-right: 2.25% !important;
+    padding-left: 2.25% !important;
+    font-weight: bolder;
+    font-size: 150% !important;
+    background-color: black;
+}
+.index-signups-page-header-sub-title {
+    background-image: linear-gradient(to right,rgb(134, 151, 246),rgb(102, 124, 246)) !important; /* rgb(79, 249, 255)*/
+    -webkit-background-clip: text;
+    color: transparent;
+    float: left !important;
+    margin-left: 7.5% !important;
+    text-align: center !important;
+    width: auto !important;
+    border: none !important;
+    font-weight: bolder;
+    font-size: 130% !important;
+    background-color: black;
+
+}
+
+
+
 /* ------------ Registration Page ---------------- */
 .index-registration-page-header {
     width: 100% !important;
@@ -109,7 +142,6 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     background-color: black;
     padding-bottom: 10% !important;
     padding-top: 1.75% !important;
-
 }
 .index-registration-page-header-image {
     height: 100% !important;
@@ -304,7 +336,7 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #f1f1f1e3;
+    background-color: #303030e3;
     position: fixed;
     padding-top: 8% !important;
     height: 100%;
