finished styling of schedule

--- a/capstone.css
+++ b/capstone.css
@@ -95,7 +95,13 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     background-color: black;
 
 }
-
+.name-signup-sheet-commit {
+    
+    
+    
+    
+    
+}
 
 
 /* ------------ Registration Page ---------------- */
