finished with the sign up page: maybe for later will be to have one name in one line for the schedule

--- a/capstone.css
+++ b/capstone.css
@@ -23,6 +23,7 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     background-image: white;
     background-attachment: fixed;
     font-family: 'Optima' !important;
+    padding-bottom: 2.5% !important;
 }
 .page-sub-container {
     background-color: rgba(255, 255, 255, 0.801) !important;
