--- a/capstone.css
+++ b/capstone.css
@@ -78,7 +78,13 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     color: #303030 !important;
     border: 2px solid #303030 !important;
 }
-
+.alertify, .ajs-dialog {
+    top: 50%;
+    transform: translateY(-50%);
+    margin: auto;
+    padding: none !important;
+    border: 3px solid black !important;
+}
 /* ------------ Signups Page ---------------- */
 .index-signups-page-header-title {
     background-image: linear-gradient(to right,rgb(134, 151, 246),rgb(102, 124, 246)) !important; /* rgb(79, 249, 255)*/
@@ -184,7 +190,6 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     border: 0.5px solid white !important;
     margin-bottom: 0.45% !important;
 }
-
 .submit-admin-login:hover, .submit-returning-patron-login:hover {
     padding: 1.25% 0% 1.25% 0% !important;
     width: 95% !important;
