--- a/capstone.css
+++ b/capstone.css
@@ -195,7 +195,16 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     width: 95% !important;
     margin-bottom: 0% !important;
 }
-
+.spanish-new-member-page {
+    background-color: #5E23BD !important;
+    width: 80% !important;
+    padding: 0.9% 0% 0.9% 0% !important;
+    text-transform: uppercase;
+    transition: 0.3s !important;
+    color: white !important;
+    border: 0.5px solid white !important;
+    margin-bottom: 0.45% !important;
+}
 .no-active-market-message, .index-index {
     width: 70% !important;
     margin-left: 15% !important;
@@ -258,7 +267,7 @@ input:not(:placeholder-shown) {border-color: hsl(120, 76%, 50%) !important;} */
     border: 0.5px solid white !important;
     margin-bottom: 0.45% !important;
 }
-.btn-submit-new-patron:hover, .add-volunteer-btn:hover, .add-inventory-btn:hover {
+.btn-submit-new-patron:hover, .add-volunteer-btn:hover, .add-inventory-btn:hover, .spanish-new-member-page:hover {
     padding: 1.25% 0% 1.25% 0% !important;
     width: 85% !important;
     margin-bottom: 0% !important;
@@ -599,7 +608,8 @@ div.content {
     transition: all 0.3s ease-in-out !important;
 }
 .select-markets {
-    padding: 0.75% 2.5% 0.75% 2.5% !important;
+    border-radius: 0px !important;
+    padding: 2.5% !important;
     border: 0px solid black !important;
     border-bottom: 3px solid rgb(102, 124, 246) !important;
     width: 30% !important;
