--- a/capstone.css
+++ b/capstone.css
@@ -659,23 +659,21 @@ div.content {
     border: 0px solid black !important;
     border-radius: 150px !important;    
 }
-.add-inventory-input {
-    border: 0px !important;
-    border-bottom: 3px solid black !important;
+.add-inventory-input, .inv-edit-input {
+    border: none !important;
+    border-bottom: 2px solid #303030 !important;
     background-color: transparent !important;
+    transition: 0.25s !important;
+    padding: 0.75% 0 0.75% 0 !important;
+
 }
-.add-inventory-input:focus {
+.add-inventory-input:focus, .inv-edit-input:focus {
+    border: none !important;
     outline: none !important;
-}
-.inv_input
-{
-    height: 5% !important;
-    border: 1px solid rgba(50, 50, 85, 0.692) !important;
-    border-radius: 4px !important;
-    padding-right: 1% !important;
-    padding-left: 1% !important;
-    margin-right: 3% !important;
-    width: 20% !important;
+    border-bottom: 3px solid rgb(102, 124, 246) !important;
+    font-weight: bolder !important;
+    font-size: 115% !important;
+    transition: all o,3s linear !important;
 }
 .inv_table
 {
