--- a/capstone.css
+++ b/capstone.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+/* ------------------ ALERTIFY CSS -------------------*/
+.ajs-message { 
+    color: #31708f !important;  
+    background-color: #b331b3 !important; 
+    border-color: #31708f !important; 
+}
+
+
+
 
 /* ------------ ONSIES CSS ----------------------- */
 .mr10{margin-right: 8% !important;}
@@ -468,11 +477,11 @@ div.content {
 .sub-admin-page-container {
     /* background-color: rgba(255, 255, 255, 0.801) !important; */
     border-radius: 1.5px !important;
-    border: 0.5px solid black !important;
+    /* border: 0.5px solid black !important; */
     width: 90% !important;
     padding-top: 2%;
     margin-left: 5% !important;
-    padding: 2.5% 0.5% 0.5% 0.5% !important;
+    padding: 2.5% 0.5% 2.5% 0.5% !important;
     text-align: center;
 }
 
